# family_calendar

./: .cache.sqlite  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  .vulture.toml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.json  debug_google_events.py  deploy_raspberry_pi.sh  git-smart-commit.sh  pyproject.toml  upgrade.sh
.github/: dependabot.yml
.github/instructions/: calendar.instructions.md
.github/workflows/: ci.yml  code-quality.yml  release.yml  security.yml
scripts/: diagnose_pir.py
src/: config.py  health_monitor.py  health_routes.py  main.py  version.py
src/calendar/: __init__.py  database.py  models.py  utils.py
src/calendar_app/: __init__.py  calendar.db  database.py  models.py  routes.py  utils.py
src/chores_app/: database.py  models.py  routes.py  utils.py
src/google/: __init__.py  api.py
src/google_integration/: __init__.py  api.py  routes.py  tasks_api.py
src/photo_upload/: __init__.py  auth.py  routes.py
src/pir_sensor/: diagnostics.py  routes.py  sensor.py
src/slideshow/: database.py  routes.py
src/static/: script.js  style.css
src/static/css/components/: base.css  calendar.css  chores.css  daily-view.css  loading.css  modal-keyboard.css  modal.css  pir-feedback.css  responsive.css  update-banner.css  virtualKeyboard.css  weather.css
src/static/js/: app.js
src/static/js/components/: calendar.js  chores.js  dailyView.js  loadingIndicator.js  modal.js  pirSensor.js  slideshow.js  updateNotifier.js  virtualKeyboard.js  weather.js
src/templates/: index.html  photo_manage.html  photo_upload.html  weather_fragment.html
src/templates/components/: calendar.html  chores.html  daily_view.html  weather.html
src/weather_integration/: api.py  routes.py  utils.py  weather_cache.json
startup/: family-calendar.service  health-monitor.sh  launch-browser.sh  launch-calendar.sh  launch.sh  test-pir-sensor.sh
tests/: test_config.py  test_health_monitor.py  test_photo_upload.py  test_version.py
tests/calendar_app/: test_database.py  test_models.py  test_routes.py  test_routes_helpers.py  test_utils.py
tests/chores_app/: test_database.py  test_routes.py  test_utils.py
tests/google_integration/: test_api.py
tests/photo_upload/: test_auth.py
tests/slideshow/: test_database.py  test_routes.py
tests/weather_integration/: test_api.py
