[project]
name = "calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
    "google-api-core>=2.24.2",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "numpy>=2.2.5",
    "openmeteo-requests>=1.4.0",
    "pandas>=2.2.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "RPi.GPIO>=0.7.1; sys_platform == 'linux'",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.0",
    "pillow-heif>=1.1.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.5",

    # Code formatting
    "black>=24.0.0",
    "isort>=5.12.0",

    # Linting and static analysis
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",

    # Code quality and complexity analysis
    "radon>=6.0.0",
    "vulture>=2.14.0",
    "autoflake>=2.3.0",

    # Security scanning
    "safety>=3.0.0",
    "pip-audit>=2.6.0",

    # Pre-commit hooks
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
